--- a/package.json
+++ b/package.json
@@ -5,19 +5,20 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/styles": "^4.10.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.19",
     "notistack": "^0.9.17",
     "password-validator": "^5.0.3",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.2.2",
     "react-color": "^2.18.1",
     "react-dom": "^16.13.1",
-    "react-hook-form": "^6.0.8",
+    "react-hook-form": "^6.3.1",
     "react-material-ui-form-validator": "^2.1.1",
     "react-number-format": "^4.4.1",
     "react-router-dom": "^5.2.0",
