--- a/src/server/package.json
+++ b/src/server/package.json
@@ -7,6 +7,9 @@
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": ">=14.4.0"
+  },
   "author": "",
   "license": "MIT",
   "dependencies": {
